# mlops-dl-project-example

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: infer.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml
configs/data/: random.yaml
configs/experiment/: experiment_1.yaml
configs/logger/: many_loggers.yaml
configs/model/: random.yaml
docs/clearml/: README.md
docs/clearml/configs/: clearml_config.temp.conf
docs/hydra/: README.md
docs/lightning/: README.md
docs/multi-gpu-training/: README.md
docs/nvidia-dali/: README.md  gpu_decode.py
docs/nvidia-triton/01-huggingface-transformer/: Makefile  client.py  docker-compose.yaml  export_model.py
docs/nvidia-triton/01-huggingface-transformer/examples/onnx-bert-trt/: config.pbtxt
docs/nvidia-triton/01-huggingface-transformer/model_repository/ensemble-onnx/: config.pbtxt
docs/nvidia-triton/01-huggingface-transformer/model_repository/onnx-bert/: config.pbtxt
docs/nvidia-triton/01-huggingface-transformer/model_repository/python-tokenizer/: config.pbtxt
docs/nvidia-triton/01-huggingface-transformer/model_repository/python-tokenizer/1/: model.py
docs/tensorrt/: README.md
docs/tensorrt/models/: get_bert_embedder_huggingface.py  get_efficientnet_b0_timm.py  get_resnet50_torchvision.py
scripts/: 01-generate-data.py  02-create-dataset.py  03-download-dataset.py  04-get-project-info.py  config.py  utils.py
src/: infer.py  train.py
src/data/: my_dataset.py
src/helper/: utils.py
src/helper/logger/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
src/model/: my_model.py
src/model/components/: simple_dense_net.py
